# GRACE-A-GraphRAG-Causal-Benchmark

./: .env.template  .gitattributes  .gitignore  README.md  README_DATASET.md  check_subgraph_stats.py  logs_extract.txt  logs_perturb.txt  plan.md  pyproject.toml  test_load.py  test_wikidata.py
data/: create_final_relationships.parquet  dataset_statistics.md  graphrag_benchmark_results.json  lightrag_benchmark_results.json  question_type_mapping.csv  wikidata_labels.json
data/clean_subgraphs/: 10030.json  10059.json  10085.json  10093.json  10119.json  10135.json  10141.json  10143.json  10150.json  10166.json  10169.json  10189.json  10204.json  10208.json  10210.json  10231.json  10252.json  10254.json  10286.json  10291.json  10338.json  10352.json  10384.json  10412.json  10431.json  10481.json  10484.json  10504.json  10561.json  10582.json  10585.json  10589.json  10622.json  10648.json  10687.json  10699.json  10718.json  10747.json  10820.json  10858.json  (+965 more)
data/lightrag/: benchmark_results.json  benchmark_results.json.bak_20260429_145133  benchmark_results.json.bak_20260501_005141
data/perturbed_subgraphs/: 10093.json  10141.json  10143.json  10169.json  10204.json  10254.json  10338.json  10352.json  10412.json  10431.json  10484.json  10504.json  10561.json  10585.json  10589.json  10699.json  10718.json  10747.json  (+554 more)
logs/: logs_extract_test_retry.txt  logs_perturb_test.txt  logs_perturb_test_retry.txt
scripts/: extract_clean_subgraphs.py  generate_perturbations.py  preview_samples.py  statistics.py  visualize_mermaid.py
visualizations/: 6351.md
(+8796 files in other folders)
