[project]
name = "graphrag-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AnhLM027", email = "boy14acf@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "fastapi>=0.135.3",
    "lightrag-hku>=1.4.14",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "openai>=2.31.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "rdflib>=7.6.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.0",
    "sparqlwrapper>=2.0.0",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
